assets/src/scss/myfossil/myfossil/fossil/_entry.scss
#fossil {
    h3 {
        border-bottom: 1px solid $color-gray-light;
        width: 100%;
        text-transform: uppercase;
        padding: 0 0 5px 0;
        margin: 30px 0 20px 0 !important;
        font-size: 1.25em;
        color: $color-secondary;
    }

    table {
        vertical-align: middle;
        border: none;
        margin: 0; padding: 0;

        tbody {
            vertical-align: middle;
            margin: 0; padding: 0;

            tr {
                margin: 0; padding: 0;
                vertical-align: middle;
                border-bottom: 1px solid $color-gray-lighter;

                td {
                    vertical-align: middle;
                    border-top: none !important;

                    &.fossil-property {
                        @extend .col-xs-4;
                        @extend .col-sm-3;
                        @extend .col-lg-2;

                        font-weight: lighter;
                        color: $color-secondary-dark !important;
                        text-transform: uppercase;
                        font-family: $font-family-sans-serif;

                        padding-left: 0;
                    }

                    &.fossil-property-value {
                        @extend .col-xs-6;
                        @extend .col-sm-7;
                        @extend .col-lg-8;

                        font-weight: bold;
                        font-size: 1.1em;
                        color: $black;

                        span.unknown {
                            color: $gray-light;
                            font-weight: lighter;
                        }

                    }

                    &.fossil-property-options {
                        @extend .col-xs-2;
                        @extend .col-sm-2;
                        @extend .col-lg-2;

                        padding: 6px 0 0 0;
                        margin: 0;
                        text-align: left;
                        font-size: 1.4em;

                        a {
                            color: $gray-light;

                            &:hover {
                                color: $color-secondary;
                            }

                        }

                    }

                }

            }

        }

    }

}


dl.fossil-header {

    a {
        color: $white;
        font-weight: bold;
        text-decoration: none;

        &:hover {
            text-decoration: underline;
        }
    }
}

.edit-fossil-popup {
    opacity: 1; 
    visibility: visible; 
    display: inline-block; 
    outline: none; 
    text-align: left; 
    position: relative; 
    vertical-align: middle; 
    max-width: 600px;
}

.alert-save {
    @extend .alert;
    @extend .alert-danger;

    margin: 5px;

    .message {
        @extend .pull-left;
        padding-top: 5px;
    }

    .actions {
        @extend .text-right;
    }

}

button.edit-fossil-taxon_open {
    margin: 22px 0;
}

#fossil-taxon-phylum, #fossil-stratum-group, #fossil-geochronology-era {
}

@mixin indent( $num )
{
    color: $color-gray-lighter;
    padding-right: 5px;
    font-weight: normal;
    letter-spacing: 0.1em;
    font-size: 0.75em;

    $indent : "";
    @for $i from 1 through $num*3 { $indent : $indent + "\2022 "; }
    content : "#{$indent}";
}

#fossil-taxon-class, #fossil-stratum-formation, #fossil-geochronology-period {
    &:before {
        @extend .hidden-xs;
        @extend .hidden-sm;
        @include indent( 1 );
    }
}

#fossil-taxon-order, #fossil-stratum-member, #fossil-geochronology-epoch {
    &:before {
        @extend .hidden-xs;
        @extend .hidden-sm;
        @include indent( 2 );
    }
}

#fossil-taxon-family, #fossil-geochronology-age {
    &:before {
        @extend .hidden-xs;
        @extend .hidden-sm;
        @include indent( 3 );
    }
}

#fossil-taxon-genus {
    &:before {
        @extend .hidden-xs;
        @extend .hidden-sm;
        @include indent( 4 );
    }
}

#fossil-taxon-species {
    &:before {
        @extend .hidden-xs;
        @extend .hidden-sm;
        @include indent( 5 );
    }
}


.edit-fossil {
    @extend .panel;
    @extend .panel-default;
	@include box-shadow( 0px 1px 1px 0px rgba( 0, 0, 0, 0.25 ) );
	border: 1px solid $color-gray-light;
    background-color: $white;
    font-family: inherit;
    font-size: 1em;
    padding: 20px;

    .edit-fossil-heading {
        @extend .panel-heading;
        background-color: $white;
        border-bottom: 1px solid $color-gray-light;
        padding: 0 0 10px 0;
        margin-bottom: 10px;

        h4 {
            margin: 0;
            padding: 0;
            border: none;
            font-weight: bold;
            text-align: center;
            width: 100%;
        }
    }

    .edit-fossil-body {
        @extend .panel-body;

        background-color: $white;
        border: none !important;
        padding: 0;

        label
        {
            font-weight: lighter;
        }
    }

    .edit-fossil-footer {
        @extend .panel-footer;
        border: 0;
        background: $white;
        margin: 0;
        padding: 0;

        ul {
            li {
                padding: 10px;
                border-top: 1px solid #eee;

                &:hover {
                    background-color: $body-bg;
                }
            }
        }
    }

}

img.phylopic {
    width: 30px;
    height: auto;
}

#map-container {
    height: 300px;
}

